--- a/About.html
+++ b/About.html
@@ -29,9 +29,9 @@
     <div class="equ-column">
         <div>
             <h2 class="headright">Images</h2>
-            <img src="images/susan.jpeg" class="pic2">
-            <img src="images/onstage.jpg" class="pic2">
-            <img src="images/spokes.jpg" class="pic2">
+            <img src="susan.jpeg" class="pic2">
+            <img src="onstage.jpg" class="pic2">
+            <img src="spokes.jpg" class="pic2">
         </div>
         <div>
             <h2>Creative and Voluntary Work and Personal Interests</h2>
