--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div>
         <h2 class="headcenter">Picture</h2>
-        <img src="images/jack.jpg" class="pic">
+        <img src="jack.jpg" class="pic">
     </div>
 </div>
 
