--- a/About.html
+++ b/About.html
@@ -46,8 +46,8 @@
         </div>
     </div>
     <div id="footer">
-        Github: @QwuinJ | LinkedIn: J Quin Belfield
-    </div>
+    Github: <a href="https://github.com/QwuinJ" class="foota">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota">J Quin Belfield</a>
+</div>
 </body>
 </html>
 <!-- 
