--- a/CV.html
+++ b/CV.html
@@ -60,7 +60,7 @@
     </div>
 </div>
 <div id="footer">
-    Github: @QwuinJ | LinkedIn: J Quin Belfield
+    Github: <a href="https://github.com/QwuinJ" class="foota">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota">J Quin Belfield</a>
 </div>
 </body>
 </html>
