--- a/index.html
+++ b/index.html
@@ -54,23 +54,8 @@
 </div>
 
 <div id="footer">
-    Github: @QwuinJ | LinkedIn: J Quin Belfield
+    Github: <a href="https://github.com/QwuinJ" class="foota">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota">J Quin Belfield</a>
 </div>
 
 </body>
 </html>
-
-<!-- <div>
-    <p class="intro">
-        <br>
-        Welcome to the website for J. Quin Belfield. Quin is a "jack of all trades", with experience in hospitality, writing, coding, and repair work.
-        <br>
-        J. Quin is based in Manchester.
-        <br>
-    </p>
-</div>
-<div class="content-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-</div> -->
