--- a/CV.html
+++ b/CV.html
@@ -35,7 +35,7 @@
         <h4>Longsands Academy - A-Levels</h4>
         <h4>Ernulf Academy - GCSEs</h4>
         <h2>Other qualifications</h2>
-        <h4>NVQ Level 2 Business Administration - East Durham Colelge - 2020</h4>
+        <h4>NVQ Level 2 Business Administration - East Durham College - 2020</h4>
         <h4>NVQ Level 2 Food Safety and Hygiene - Flow Staff Training - 2019</h4>
         <h4>Full UK Driving Licence</h4>
         <h2>Main Skills</h2>
