--- a/About.html
+++ b/About.html
@@ -44,8 +44,8 @@
             <p>For the past four years I have worked at festivals as a voluntary steward, including Glastonbury, Isle of Wight Festival, and End of the Road Festival. This has been both excellent fun, and taught me valuable communication and crowd control skills.<br><br>I have a variety of hobbies, including star-gazing, DIY, embroidery, and circus skills. I am a keen walker, and enjoy birdwatching.</p>
         </div>
     </div>
-    <div id="footer">
-    Github: <a href="https://github.com/QwuinJ" class="foota">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota">J Quin Belfield</a>
+   <div id="footer">
+    Github: <a href="https://github.com/QwuinJ" class="foota" target="_blank">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota" target="_blank">J Quin Belfield</a>
 </div>
 </body>
 </html>
