--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 
 <div id="footer">
-    Github: <a href="https://github.com/QwuinJ" class="foota">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota">J Quin Belfield</a>
+    Github: <a href="https://github.com/QwuinJ" class="foota" target="_blank">@QwuinJ</a> | LinkedIn: <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota" target="_blank">J Quin Belfield</a>
 </div>
 
 </body>
