--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div>
         <h2 class="headcenter">Links</h2>
         <p>
-            I can be found on Github at @QwuinJ, and on LinkedIn under the name J Quin Belfield.
+            I can be found on Github at <a href="https://github.com/QwuinJ" class="foota" target="_blank">@QwuinJ</a>, and on LinkedIn under the name <a href="https://www.linkedin.com/in/j-quin-belfield-a64224224/" class="foota" target="_blank">J. Quin Belfield</a>.
             <br>
             <br>
             To learn more about my professional experience, click on the CV option in the menu bar, or click <a href="CV.html">here</a>. To learn more about my writing or creative work, click on the About Me option, or click <a href="About.html">here</a>.
