--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div>
         <h2 class="headcenter">Picture</h2>
-        <img src="jack.jpg" class="pic">
+        <img src="profilepic.jpg" class="pic">
     </div>
 </div>
 
